[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Images/Pause Background.png" type="Texture" id=2]
[ext_resource path="res://Images/Home Button.png" type="Texture" id=3]
[ext_resource path="res://Images/Continue Button.png" type="Texture" id=4]
[ext_resource path="res://Images/Reset Button.png" type="Texture" id=5]

[node name="Pause Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="Pause Background" type="Sprite" parent="."]
position = Vector2( 188.532, 333.638 )
texture = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="HomeButton" type="Button" parent="Control"]
margin_left = 215.234
margin_top = 285.854
margin_right = 314.234
margin_bottom = 374.854
icon = ExtResource( 3 )
flat = true

[node name="ContinueButton" type="Button" parent="Control"]
margin_left = 161.0
margin_top = 217.0
margin_right = 307.0
margin_bottom = 284.0
icon = ExtResource( 4 )
flat = true

[node name="ResetButton" type="Button" parent="Control"]
margin_left = 67.6871
margin_top = 215.575
margin_right = 154.687
margin_bottom = 286.575
icon = ExtResource( 5 )
flat = true
[connection signal="button_down" from="Control/HomeButton" to="." method="_on_HomeButton_button_down"]
[connection signal="button_down" from="Control/ContinueButton" to="." method="_on_ContinueButton_button_down"]
[connection signal="button_down" from="Control/ResetButton" to="." method="_on_ResetButton_button_down"]
